--- a/css/style.css
+++ b/css/style.css
@@ -60,8 +60,8 @@ body {
 
 /* Header */
 .header {
-    padding-top: 24px;
-    padding-bottom: 25px;
+    /* padding-top: 24px;
+    padding-bottom: 25px; */
     border-bottom: 1px solid #ECECEC;
 }
 
@@ -108,16 +108,22 @@ body {
 .flex-header {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .nav-item {
+    display: block;
     font-family: inherit;
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
+    padding-top: 25px;
+    padding-bottom: 25px;
 
     color: var(--title-color);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-item:hover,
@@ -140,6 +146,21 @@ body {
 
 .current {
     color: var(--accent-color);
+    position: relative;
+
+}
+
+.current::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    margin-bottom: -1px;
 }
 
 
@@ -147,6 +168,8 @@ body {
 .svg-mail,
 .svg-tel {
     fill: var(--main-color);
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -361,11 +384,13 @@ body {
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    color: var(--white-color);
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--icon-color);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-networks-icons {
@@ -398,9 +423,10 @@ body {
     width: 170px;
     height: 92px;
     border: 1px solid var(--icon-color);
-    /* padding: 16px 32px; */
     border-radius: 4px;
     width: calc((100% - 150px) / 6);
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -411,6 +437,8 @@ body {
     width: 100%;
     height: 100%;
     color: var(--icon-color);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-icon {
@@ -454,6 +482,8 @@ body {
     font-style: normal;
 
     color: var(--white-color);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -498,6 +528,8 @@ body {
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
     color: var(--white-color);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .join-icon {
@@ -546,6 +578,9 @@ body {
 
     padding: 6px 22px;
     min-width: 73px;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .portfolio-button:hover,
@@ -569,6 +604,8 @@ body {
 .portfolio-card {
     display: block;
     text-decoration: none;
+
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-inform {
