--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,32 @@ body {
     gap: 30px;
 }
 
+.examples-item {
+    position: relative;
+}
+
+.examples-text {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 70px;
+
+    font-weight: 700;
+    line-height: 1, 14;
+    text-align: center;
+    text-transform: uppercase;
+
+    color: var(--white-color);
+    background-color: rgba(47, 48, 58, 0.8);
+
+}
+
+
 
 /* Our team */
 
@@ -607,6 +633,44 @@ body {
 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.portfolio-card-back {
+    display: block;
+    position: relative;
+    overflow: hidden;
+}
+
+
+.portfolio-back-text {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    padding: 63px 24px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+
+    font-size: 18px;
+    line-height: 1.56;
+
+    background-color: rgba(33, 150, 243, 0.9);
+    color: var(--white-color);
+
+    transform: translateY(100%);
+
+    transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-card:hover .portfolio-back-text,
+.portfolio-card:focus .portfolio-back-text {
+    transform: translateY(0);
+}
+
 
 .portfolio-inform {
     padding: 20px 24px;
